Fix main loader animation compatibility on Firefox using z-index because display property is not animable

--- a/sass/animations.scss
+++ b/sass/animations.scss
@@ -37,5 +37,6 @@
   100% {
     opacity: 0;
     display: none;
+    z-index: -1;
   }
 }
